manifests/spo-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  name: spo-backend-ing
  namespace: spo
spec:
  ingressClassName: nginx
  rules:
    - host: spo-api.pea.co.th
      http:
        paths:
          - backend:
              service:
                name: spo-backend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
